# cas-reporting

./: .eslintrc.js  .eslintrc.yml  .gitignore  .pre-commit-config.yaml  .tool-versions  COMPLIANCE.yaml  README.md  babel.config.js  package-lock.json  package.json  requirements.txt
.bin/: pre-commit-lint.sh
.github/ISSUE_TEMPLATE/: bug-template.md  discovery-and-service-design-task-template.md  task-issue-template.md  tech-debt-template.md  user-story-template.md
.github/actions/dev-env-setup/: action.yml
.github/workflows/: build-and-test.yaml  codeql.yaml  eslint.yaml  precommit.yaml  pytest.yaml  scan-code-owasp-zap.yaml  test-precommit.yaml
bc_obps/: Makefile  manage.py  pyproject.toml
bc_obps/bc_obps/: settings.py  urls.py
client/: .eslintrc.js  Dockerfile  next.config.js  package.json  tailwind.config.js
client/app/: layout.tsx  page.tsx
client/app/components/layout/: Header.tsx
client/app/components/theme/: ThemeRegistry.tsx
client/tests/: page.test.tsx
docs/: README.md  developer-environment-setup.md  developer-guide.md
helm/cas-reporting/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-test.yaml  values.yaml
helm/cas-reporting/templates/: _helpers.tpl
helm/cas-reporting/templates/backend/: deployment.yaml  route.yaml  secret.yaml  service.yaml
helm/cas-reporting/templates/frontend/: deployment.yaml  route.yaml  secret.yaml  service.yaml
helm/cas-reporting/templates/networkPolicy/: backend-allow-from-openshift-ingress.yaml  backendPostgresIngress.yaml  intraRelease.yaml  (+2 more)
server/: .env.example  .tool-versions  Dockerfile  Makefile  manage.py  pyproject.toml
server/server/: asgi.py  settings.py  urls.py  wsgi.py
server/tests/: test_sample.py
