[tool.poetry]
name = "reporting"
version = "0.1.0"
description = ""
authors = ["Josh Gamache <joshua@button.is>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.4"
pylint = "^2.17.5"
django-ninja = "^0.22.2"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
